[package]
name = "update_qcloud_firewall"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["blocking", "json"]}
tokio = { version = "*", features = ["full"]}
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*", default-features = false, features = ["alloc"] }
openssl = {version = "0.10", features = ["vendored"]}
lazy_static = "1.4.0"

[build-dependencies]
cbindgen = "0.24.3"

